Implemented: QR generation and verification feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=truescan-backend
 spring.data.mongodb.uri=mongodb://localhost:27017/truescan
 spring.data.mongodb.database=truescan
+secret.key=superSecretKey123
