--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
 version: "3.8"
 
 services:
-  mongo:
-    image: mongo
-    container_name: truescan_mongo
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-
   backend:
     build:
       context: .
@@ -16,10 +8,5 @@ services:
     container_name: truescan_backend
     ports:
       - "8080:8080"
-    depends_on:
-      - mongo
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/truescan_db
-
-volumes:
-  mongo_data:
+      SPRING_DATA_MONGODB_URI: mongodb+srv://mahtotgher13:PWfDXhkoJreTmqPl@cluster0.aphrypq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
