--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb+srv://mahtotgher13:PWfDXhkoJreTmqPl@cluster0.aphrypq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+        SPRING_DATA_MONGODB_URI: ${SPRING_DATA_MONGODB_URI}
