--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
 			<version>4.6.0</version>
 			<scope>test</scope> <!-- Typically, Mockito is only needed for tests -->
 		</dependency>
+
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>core</artifactId>
+			<version>4.9.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
